# PyreMark

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
css/: cover_letter.css  resume.css
j2/: competences.html.j2  competencies.html.j2  cover_letter.css.j2  cover_letter.html.j2  education.html.j2  experience.html.j2  general_parser.html.j2  index.html.j2  knowledge.html.j2  languages.html.j2  microcredits_cards.css.j2  microcredits_cards.html.j2  microcredits_list.html.j2  multipage.js.j2  patents.html.j2  preambule.html.j2  projects_cards.html.j2  resume.css.j2  resume.html.j2  resume.js.j2  resume_canvas.html.j2  styles.css.j2
j2/css/: chapter.css  icon.css  layout.css  link.css  photo.css  pillbox.css  preambule.css  tokens.css.j2  utilities.css
js/: index.js  multipage.js  resumeViewer.js
specs/: decisions.md
specs/documentation/: README-spec.md  spec-frontmatter.md
specs/features/: JSON-schema.md  MCP-server.md  llm-customisation.md  markdown-cv.md  pydantic-classes.md  qr-code.md  webapp.md  xmp-metadata.md
specs/refactorings/: modular-css.md  split-monolith.md
specs/testing/: test-enhancement-spec.md  testdata.md
src/: build.py  config.py  data.py  git_utils.py  images.py  main.py  rendering.py  theme.py  transform_md_to_yaml_html.py  webapp.py  xmp_metadata.py
testdata/: post.css  pre.css
testdata/cv/: cover_letter.toml  single_page.toml  tokens_tweaked.toml  two_page.toml
testdata/md/: cover_letter.md  cover_letter_note.md  cv_note.md
testdata/yaml/: competencies.yaml  cover_letter.yaml  education.yaml  experience.yaml  knowhow.yaml  knowledge.yaml  languages.yaml  microcredits.yaml  patents.yaml  (+5 more)
tests/: conftest.py  test_build.py  test_transform_md_to_yaml_html.py  test_xmp_metadata.py
(+42 files in other folders)
