[tool.poetry]
name = "PyreMark"
version = "0.2.0"
description = "Resume creation from html and css"
authors = ["stalhatz <stalhatz@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.scripts]
pyremark = "src.main:main"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1"
markdown2 = "^2.5"
playwright = "^1.50.0"
qrcode = {extras = ["pil"], version = "^7.4"}
Pillow = "^10.0.0"
PyYAML = "^6.0"
pypdf = "^4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
